# caster

./: .envrc  .gitignore  Dockerfile  Gemfile  README.md  docker-compose.yml  ingest.py  normalize.py  pyproject.toml  schema.sql  server.py
.claude/: CLAUDE.md
app/models/: cents.rb  feed_column.rb  feed_profile.rb  listing.rb  listing_normalizer.rb  listing_scope.rb  listing_snapshot.rb  market_summary_query.rb  price_trend_query.rb  raw_listing.rb
app/services/: feed_profile_validator.rb  ingester.rb  normalizer.rb
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml
db/: schema.rb
db/migrate/: 20260418013132_create_feed_profiles.rb  20260418013140_create_feed_columns.rb  20260418013146_create_raw_listings.rb  20260418013151_create_listings.rb  20260418013157_create_listing_snapshots.rb
lib/tasks/: caster.rake
spec/: rails_helper.rb
spec/fixtures/: feed_columns.yml  feed_profiles.yml  raw_listings.yml
spec/models/: cents_spec.rb  listing_normalizer_spec.rb  listing_scope_spec.rb  listing_snapshot_spec.rb  listing_spec.rb  market_summary_query_spec.rb  price_trend_query_spec.rb
spec/services/: normalizer_spec.rb
test/fixtures/: listings.yml
test/models/: cents_test.rb  listing_scope_test.rb  market_summary_query_test.rb  price_trend_query_test.rb
tmp/cache/bootsnap/: load-path-cache
tmp/cache/bootsnap/compile-cache-iseq/00/: 0f2af8a7f38862  26aff32abb4081  3088a3f0d83d0e  97f0708f023327  b57c21ee2537b2
tmp/cache/bootsnap/compile-cache-iseq/01/: 1ac9a46dedea9d  23e9a9c1c970a7  705d5a438db967  96cb05ca251a06  b2eb85c89e1c50  (+1 more)
(+1352 files in other folders)
