[project]
name = "caster"
version = "0.1.0"
description = "Real estate intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "duckdb>=1.2.0",
    "anthropic>=0.49.0",
]

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]
